--- a/style.css
+++ b/style.css
@@ -11,3 +11,36 @@
     background-color: var(--cor-de-fundo);
     color: var(--branco);
 }
+
+.conteudo-principal{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    /* define uma margem de 0 para cima e para baixo
+    e automática para os lados */
+}
+
+.titulo-principal{
+    text-align: center;
+    width: 100%;
+    font-size: 32px;
+}
+
+.botao{
+    background-color: var(--botao-inativo);
+    color: white;
+    display: flex;
+    justify-content: center;
+    /*Determina a posição horizontal no display flex*/
+    align-items: center;
+    /*Determina a posição vertical no display flex*/
+    width: 100%;
+    font-size: 18px;
+    /*Controla o tamanho da fonte*/
+    padding: 1em ;
+    /* Um afastamento interno */
+}
