--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
     color: var(--branco);
 }
 
+span{
+    color: var(--verde);
+}
 .conteudo-principal{
     display: flex;
     flex-direction: column;
@@ -29,6 +32,9 @@
     width: 100%;
     font-size: 32px;
 }
+.botoes{
+ display: block;   
+}
 
 .botao{
     background-color: var(--botao-inativo);
@@ -43,4 +49,14 @@
     /*Controla o tamanho da fonte*/
     padding: 1em ;
     /* Um afastamento interno */
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+}
+.botao:first-child{
+    border-radius: 20px 20px 0 0;
+}
+
+.botao:last-child{
+    border-radius: 0px 0px 20px 20px;
 }
