--- a/style.css
+++ b/style.css
@@ -60,11 +60,16 @@ span{
 .botao:last-child{
     border-radius: 0px 0px 20px 20px;
 }
-.ativo{
+.botao.ativo{
     background-color: var(--botao-ativo);
     border-bottom: 2px solid var(--verde) ;
 }
-
+.aba-conteudo{
+    display: none;
+}
+.aba-conteudo.ativo{
+    display: block;
+}
 @media screen and (min-width: 700px){
     .botoes{
         display: flex;
