--- a/style.css
+++ b/style.css
@@ -86,6 +86,28 @@ span{
     text-transform: uppercase;
 }
 
+.contador{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.contador-digito{
+    padding: 0 16px;
+    text-align: center;
+}
+.contador-digito-numero{
+    font-size: 80px;
+    margin: 0;
+}
+
+.contador-digito-texto{
+    color: var(--verde);
+    font-size: 20px;
+    margin: 0;
+}
+
+
 @media screen and (min-width: 700px){
     .botoes{
         display: flex;
